--- a/style.css
+++ b/style.css
@@ -26,16 +26,7 @@ max-height: 4000px;
 	font-size:1em;
 }
 .home-container
-{
-/*
-	min-height:800px;
-	background-image: url("banner.jpg");
-	background-repeat: no-repeat;
-	background-size: 100% 800px;
-    background-attachment: fixed;
-	position: relative;
-*/
-    
+{    
     background:  url("banner.jpg") center center no-repeat fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -97,7 +88,7 @@ min-height: 750px;
 
 .contact-container
 {
-	min-height:1000px;
+	padding-bottom: 23px;
 /*	position: relative;*/
 	background-color: #efefef;
 }
@@ -194,15 +185,12 @@ color:black;
     padding-top: 2px;
 }
 
-.list-unstyled .ul .a{
-    text-decoration: none;
-    color: #fff;
-}
  .footer{
     background-size: auto;
     background-position: top center;
     background-attachment: scroll!important;
-      background: #303030;
+    background: #303030;
+    padding-top: 10px;
 }
 
 .footer-content{
@@ -277,10 +265,23 @@ color:black;
 .social-box .fa{
 	margin: 5px 10px;
 }
+
+
+
 .fa:hover {
     opacity: 0.7;
 	 color: #FBC213;
      border-color: #FBC213;
+     transition: 1s;
+  -webkit-transition: 1s;
+  -moz-transition: 1s;
+  -ms-transition: 1s;
+  -o-transition: 1s;
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
 .contact-details a:link
@@ -334,12 +335,4 @@ margin-bottom: 10px;
     min-height: 600px;
 }
 }
-/*
-
-.sidebar{
-    width:100%;
-    height:100%;
-    margin-right:10px;
-}
-*/
 
